# devlog

./: .develop-branch  .dockerignore  .env.example  .env.migration  .eslintrc.cjs  .gitignore  .npmrc  AGENTS.md  CLAUDE.md  CODEBASE_REORGANIZATION_SUMMARY.md  CONFIGURATION_COMPARISON.md  CONFIGURATION_MIGRATION.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  Dockerfile.dev  Dockerfile.vscode-automation  GEMINI.md  LICENSE  MIGRATION_SUMMARY.md  Makefile  PRISMA_MIGRATION.md  README.md  REFACTORING_PLAN.md  SSO_IMPLEMENTATION_SUMMARY.md  VERCEL_DEPLOYMENT.md  WORKSPACE_MANAGEMENT.md  docker-compose.dev.yml  docker-compose.yml  eslint.config.js  go.mod  next.config.js  next.config.prisma.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-config-migration.mjs  test-validation.ts  tsconfig.json  (+4 more)
.devcontainer/: devcontainer.json
.devlog/: index.json
.devlog/entries/: 001-fix-web-dashboard-ui-layout-issues.json  002-implement-markdown-rendering-for-devlog-detail-fie.json  003-fix-visual-elements-in-markdown-rendering-alerts-a.json  004-fix-unbalanced-margins-in-alert-markdown-content.json  005-add-missing-fields-to-devloglist-table-component.json  006-optimize-ui-display-for-acceptance-criteria-and-ai.json  007-centralize-all-typescript-types-and-interfaces-in-.json  008-modularize-globals-css-into-focused-css-modules.json  009-fix-sidebar-ui-corruption-on-home-page-refresh.json  010-add-support-for-all-entrystatus-values-in-dashboar.json  011-add-time-series-charts-to-dashboard-to-replace-red.json  012-implement-real-backend-api-for-dashboard-time-seri.json  013-optimize-line-height-in-markdown-rendered-content.json  014-add-missing-context-fields-to-updatedevlogrequest-.json  015-remove-redundant-note-addition-logic-from-updatede.json  016-evaluate-and-propose-solutions-for-removed-updated.json  017-add-aggregated-file-code-changes-summary-to-devlog.json  018-embed-updateaicontext-functionality-into-updatedev.json  019-update-testing-methodology-in-copilot-instructions.json  020-create-flexible-pagelayout-component-for-better-br.json  021-refactor-component-css-to-use-css-modules-pattern.json  022-optimize-devlog-web-folder-structure-and-implement.json  023-consolidate-duplicate-css-files-merge-layout-css-a.json  024-move-api-fetching-from-dashboard-component-to-dash.json  025-add-skeleton-loading-state-for-recent-devlogs-in-d.json  026-consolidate-overview-stats-components-into-shared-.json  027-update-devlog-status-values-to-match-new-requireme.json  028-improve-compact-layout-in-overviewstats-component.json  029-fix-notes-ordering-in-devlogdetails-to-show-most-r.json  030-add-id-column-as-first-column-in-devloglist-table.json  031-refactor-devlogdetails-to-use-devlogform-component.json  032-implement-inline-create-edit-in-devlogdetails-comp.json  033-extract-editablefield-into-reusable-component.json  034-refactor-editablefield-for-seamless-read-edit-ux-l.json  035-implement-save-button-with-changed-flag-system-for.json  036-create-reusable-devlogtag-components-for-status-pr.json  037-add-skeleton-loading-states-to-devlogdetails-compo.json  038-add-skeleton-loading-states-to-devloglist-componen.json  (+345 more)
.github/: copilot-instructions.md
.github/instructions/: ai.instructions.md  (+6 more)
.husky/: pre-commit
.lspec/: config.json
app/: page.tsx
docs/: AST_VALIDATION_GUIDE.md  DYNAMIC_VALIDATION_OVERHAUL.md  PRE_COMMIT_HOOKS.md  README.md
prisma/: schema.prisma
rust/: Cargo.toml
rust/devlog-adapters/: Cargo.toml
rust/devlog-adapters/src/: claude.rs  copilot.rs  cursor.rs  lib.rs  registry.rs
rust/devlog-backfill/: Cargo.toml
rust/devlog-backfill/src/: lib.rs
rust/devlog-buffer/: Cargo.toml
rust/devlog-buffer/src/: lib.rs
rust/devlog-cli/: Cargo.toml
rust/devlog-cli/src/: main.rs  server.rs
rust/devlog-cli/tests/: integration_test.rs
rust/devlog-core/: Cargo.toml
rust/devlog-core/src/: config.rs  lib.rs
rust/devlog-hierarchy/: Cargo.toml
rust/devlog-hierarchy/src/: lib.rs
rust/devlog-watcher/: Cargo.toml
rust/devlog-watcher/src/: discovery.rs  lib.rs
scripts/: README.md  detect-migration.js  dev-with-check.sh  enable-timescaledb.sql  init-db.sql  migrate-project-names.js  migrate-workspace-to-project.ts  run.js  test-copilot-collection.sh  test-hierarchy.sql  test-mcp-compliance.mjs  validate-all-ast.js  validate-all.js  validate-api-standardization-ast.js  validate-architecture-patterns-ast.js  validate-imports.js  validate-phase4.js  validate-security-performance-ast.js  validate-testing-standards-ast.js  validate-typescript-best-practices-ast.js
specs/: ORGANIZATION.md  README.md
(+419 files in other folders)
