[workspace]
members = [
    "devlog-cli",
    "devlog-core",
    "devlog-adapters",
    "devlog-buffer",
    "devlog-watcher",
    "devlog-hierarchy",
    "devlog-backfill",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Codervisor <hello@codervisor.com>"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
notify = "6.1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
futures = "0.3"
async-trait = "0.1"
regex = "1.10"
uuid = { version = "1.7", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json"] }
config = "0.14"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tower = "0.4"
walkdir = "2.4"
