[package]
name = "devlog-backfill"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
devlog-core = { path = "../devlog-core" }
devlog-adapters = { path = "../devlog-adapters" }
devlog-buffer = { path = "../devlog-buffer" }
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
chrono.workspace = true
sqlx.workspace = true
walkdir = "2.4"
