[package]
name = "devlog-buffer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
devlog-core = { path = "../devlog-core" }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
chrono.workspace = true
